--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,24 +1,21 @@
 [versions]
-kotlin = "2.1.0"
-compose-multiplatform = "1.7.3"
+kotlin = "2.2.0"
+compose-multiplatform = "1.8.2"
 
 # KotlinX
-kotlinx-coroutines = "1.10.1"
-kotlinx-serialization = "1.8.0"
+kotlinx-serialization = "1.8.1"
 kotlinx-multik = "0.2.3"
 
 # AndroidX
-androidx-lifecycle = "2.9.0-alpha01"
-androidx-navigation = "2.8.0-alpha11"
+androidx-lifecycle = "2.9.1"
+androidx-navigation = "2.9.0-beta03"
 
 [libraries]
-kotlinx-coroutines-swing = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-swing", version.ref = "kotlinx-coroutines" }
 kotlinx-serialization-json = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-json", version.ref = "kotlinx-serialization" }
 kotlinx-multik-core = { group = "org.jetbrains.kotlinx", name = "multik-core", version.ref = "kotlinx-multik" }
 kotlinx-multik-default = { group = "org.jetbrains.kotlinx", name = "multik-default", version.ref = "kotlinx-multik" }
 
-androidx-lifecycle-viewmodel = { group = "org.jetbrains.androidx.lifecycle", name = "lifecycle-viewmodel", version.ref = "androidx-lifecycle" }
-androidx-lifecycle-runtime-compose = { group = "org.jetbrains.androidx.lifecycle", name = "lifecycle-runtime-compose", version.ref = "androidx-lifecycle" }
+androidx-lifecycle-viewmodel = { group = "org.jetbrains.androidx.lifecycle", name = "lifecycle-viewmodel-compose", version.ref = "androidx-lifecycle" }
 androidx-navigation = { group = "org.jetbrains.androidx.navigation", name = "navigation-compose", version.ref = "androidx-navigation" }
 
 [plugins]
