--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,4 +31,4 @@ jobs:
           aws-region: ${{ secrets.AWS_REGION }}
 
       - name: Deploy static site to S3 bucket
-        run: aws s3 sync ./app/build/processedResources/wasmJs/main s3://${{ vars.BUCKET_NAME }} --delete
+        run: BUCKET_NAME=${{ vars.BUCKET_NAME }} ./scripts/upload.sh
